initial upload 26Sep 10:41AM

--- a/PageTheScroll/Base.lproj/Main.storyboard
+++ b/PageTheScroll/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,63 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PageTheScroll" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="KeJ-ct-BXb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="xQt-RN-2GH">
+                                <rect key="frame" x="251" y="20" width="53" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="53" id="Hwz-ja-dfy"/>
+                                    <constraint firstAttribute="height" constant="53" id="W5u-if-aDg"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="Pag-0c-4bU">
+                                <rect key="frame" x="0.0" y="396" width="320" height="172"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="172" id="9lU-CX-SSk"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yCM-tI-X0I">
+                                <rect key="frame" x="60" y="0.0" width="200" height="568"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="6MX-Ej-bnm"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="KeJ-ct-BXb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1z6-u5-ex1"/>
+                            <constraint firstItem="Pag-0c-4bU" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="4XC-wy-ZG4"/>
+                            <constraint firstItem="yCM-tI-X0I" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5wg-aP-7c1"/>
+                            <constraint firstItem="KeJ-ct-BXb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FMW-3v-MuC"/>
+                            <constraint firstItem="KeJ-ct-BXb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Hx8-Dj-W46"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xQt-RN-2GH" secondAttribute="trailing" constant="16" id="KXo-a3-pqQ"/>
+                            <constraint firstItem="KeJ-ct-BXb" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="T2d-VQ-MbF"/>
+                            <constraint firstItem="xQt-RN-2GH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cH7-uK-zMy"/>
+                            <constraint firstItem="Pag-0c-4bU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="eHO-5U-XPW"/>
+                            <constraint firstItem="Pag-0c-4bU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hQq-63-Dyf"/>
+                            <constraint firstItem="yCM-tI-X0I" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ojZ-cV-poq"/>
+                            <constraint firstItem="yCM-tI-X0I" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xOo-76-s5H"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="yCM-tI-X0I" id="Vbo-Gc-NIf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="33.75" y="29.577464788732396"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
